# intrastat-generator

./: .gitignore  DO ZROBIENIA.txt  LICENSE  README.md  intrastat-generator-test.spec  intrastat-generator.spec  intrastat_generator_gui.py  intrastat_generator_gui_v2.py  intrastat_generator_gui_v3_3.py  pyproject.toml  requirements.txt
.github/scripts/: check_self_hosted_runner.py  embed_build_info.py
.github/workflows/: codeql.yml  release.yml
Słowniki/: slownik002.xml  slownik004.xml  slownik004_2022.xml  slownik005.xml  slownik007.xml  slownik049.xml  slownik060.xml  slownik061.xml  slownik067.xml  slownik187.xml  slownik188.xml  slownik189.xml  slownik190.xml  slownik191.xml
Taryfa/: taryfa.txt
docs/superpowers/plans/: 2026-06-17-project-reorganization.md  2026-06-18-resource-version-build.md  2026-06-18-tariff-year-selection.md  2026-06-19-icons-repository-updates.md
docs/superpowers/specs/: 2026-06-17-project-reorganization-design.md  (+3 more)
src/intrastat_generator/: __init__.py  __main__.py  _build_info.py  assets.py  cli.py  cn.py  config.py  dictionaries.py  gui.py  models.py  naming.py  parser.py  paths.py  project.py  service.py  tariff.py  text.py  transport.py  updater.py  version.py  workbook.py
tests/: test_assets.py  test_dictionaries.py  test_embed_build_info.py  test_entrypoint.py  test_gui_info.py  test_naming.py  test_paths.py  test_project_metadata.py  test_pyinstaller_specs.py  test_readme.py  test_release_workflow.py  test_runner_detection.py  test_tariff.py  test_updater.py  test_version.py  test_workbook.py
